--- a/Reves-Intimes/package.json
+++ b/Reves-Intimes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio_maxouloulou",
+  "name": "reves-intimes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -48,10 +48,13 @@
   },
   "devDependencies": {
     "@heroicons/react": "^1.0.1",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-flipcard": "^0.2.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "typewriter-effect": "^2.18.0"
   }
 }
